<resources>
    <string name="app_name">DronJoystickV2</string>


    // Radiobuttons
    <string name="rb_bluetooth">Bluetooth</string>
    <string name="rb_usb">USB</string>
    <string name="rb_rs232">RS232</string>

    // Textviews
    <string name="tv_throttle">Throttle</string>
    <string name="tv_throttle_value">0</string>

    <string name="tv_byte3">Byte3</string>
    <string name="tv_byte2">Joystick</string>
    <string name="tv_byte1">Byte1</string>
    <string name="tv_byte0">Byte0</string>

    <string name="tv_dummy">X</string>
    <string name="tv_byte3_b1">0</string>
    <string name="tv_byte3_b0">0</string>

    <string name="tv_byte2_b7">0</string>
    <string name="tv_byte2_b6">0</string>
    <string name="tv_byte2_b5">0</string>
    <string name="tv_byte2_b4">0</string>
    <string name="tv_byte2_b3">0</string>
    <string name="tv_byte2_b2">0</string>
    <string name="tv_byte2_b1">0</string>
    <string name="tv_byte2_b0">0</string>

    <string name="tv_byte1_b7">0</string>
    <string name="tv_byte1_b6">0</string>
    <string name="tv_byte1_b5">0</string>
    <string name="tv_byte1_b4">0</string>
    <string name="tv_byte1_b3">0</string>
    <string name="tv_byte1_b2">0</string>
    <string name="tv_byte1_b1">0</string>
    <string name="tv_byte1_b0">0</string>

    <string name="tv_byte0_b7">0</string>
    <string name="tv_byte0_b6">0</string>
    <string name="tv_byte0_b5">0</string>
    <string name="tv_byte0_b4">0</string>
    <string name="tv_byte0_b3">0</string>
    <string name="tv_byte0_b2">0</string>
    <string name="tv_byte0_b1">0</string>
    <string name="tv_byte0_b0">0</string>

    <string name="tv_log_title">Log</string>

    // Button
    <string name="btn_conectar">Conectar</string>

</resources>
