<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/jizq_layout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/joystick_izq"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/jder_layout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/joystick_der"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"></LinearLayout>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_bluetooth"
            android:onClick="onRadioButtonClicked"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/rb_usb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_usb"
            android:onClick="onRadioButtonClicked"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/rb_rs232"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_rs232"
            android:onClick="onRadioButtonClicked"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/midle_layout"
        android:layout_width="124dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/jizq_layout"
        app:layout_constraintEnd_toStartOf="@+id/jder_layout"
        app:layout_constraintStart_toEndOf="@+id/jizq_layout"
        app:layout_constraintTop_toTopOf="@+id/jder_layout">

        <TextView
            android:id="@+id/tv_byte3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_byte3"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/byte3data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_byte3_b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_dummy"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte3_b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_dummy"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte3_b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_dummy"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte3_b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_dummy"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte3_b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_dummy"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte3_b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_dummy"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte3_b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte3_b1"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte3_b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte3_b0"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_byte2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_byte2"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/byte2data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_byte2_b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b7"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte2_b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b6"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte2_b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b5"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte2_b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b4"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte2_b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b3"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte2_b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b2"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte2_b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b1"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte2_b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte2_b0"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_byte1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_byte1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/byte1data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_byte1_b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b7"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte1_b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b6"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte1_b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b5"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte1_b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b4"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte1_b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b3"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte1_b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b2"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte1_b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b1"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte1_b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte1_b0"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_byte0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_byte0"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/byte0data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_byte0_b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b7"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte0_b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b6"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte0_b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b5"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte0_b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b4"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte0_b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b3"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte0_b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b2"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte0_b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b1"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_byte0_b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_byte0_b0"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_connect"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_conectar"
        app:layout_constraintStart_toEndOf="@+id/radiogroup"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FixLogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_log_title"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/scrollView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="380dp"
        android:layout_height="88dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/jder_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FixLogTitle">

        <LinearLayout
            android:id="@+id/scrollView_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>